// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should accept base error title 1`] = `
<form
  className="form-horizontal well"
>
  <Alert
    className="base in fade"
    onDismiss={null}
    type="danger"
  >
    <AlertBody
      title="Oops"
    >
      <li
        key="0"
      >
        invalid something
      </li>
    </AlertBody>
  </Alert>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;

exports[`Form should display multiple base errors 1`] = `
<form
  className="form-horizontal well"
>
  <Alert
    className="base in fade"
    onDismiss={null}
    type="danger"
  >
    <AlertBody
      title="Unable to save"
    >
      <li
        key="0"
      >
        invalid something
      </li>
      <li
        key="1"
      >
        error too
      </li>
    </AlertBody>
  </Alert>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;

exports[`Form should display one base error 1`] = `
<form
  className="form-horizontal well"
>
  <Alert
    className="base in fade"
    onDismiss={null}
    type="danger"
  >
    <AlertBody
      title="Unable to save"
    >
      <li
        key="0"
      >
        invalid something
      </li>
    </AlertBody>
  </Alert>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;

exports[`Form should render a form 1`] = `
<form
  className="form-horizontal well"
>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;
